# pcg-final

./: README.md  config.py  pyproject.toml  stats.ipynb  test.py  train.py
gymnasium_env/: __init__.py
gymnasium_env/envs/: __init__.py  pcg_env.py
results/: env_config.jsonl  env_params.jsonl
results/maze-a2c-WRGC1R4/: monitor.csv  training_metrics.csv
results/maze-ppo-CR01/: monitor.csv  training_metrics.csv
results/maze-ppo-CR05/: monitor.csv  training_metrics.csv
results/maze-ppo-CR10/: monitor.csv  training_metrics.csv
results/maze-ppo-NFGC1R1/: monitor.csv  training_metrics.csv
results/maze-ppo-NFGC1R3/: monitor.csv  training_metrics_nfgc1r3.csv
results/maze-ppo-NFGC1R3.1/: monitor.csv  training_metrics_nfgc1r3-1.csv
results/maze-ppo-NFGC2R3/: monitor.csv  training_metrics_nfgc2r3.csv
results/maze-ppo-NRGC1R1/: monitor.csv  training_metrics.csv
results/maze-ppo-NRGC1R3/: monitor.csv  training_metrics_nrgc1r3.csv
results/maze-ppo-NRGC1R3.1/: monitor.csv  training_metrics_nrgc1r3-1.csv
results/maze-ppo-NRGC1R4/: monitor.csv  training_metrics.csv
results/maze-ppo-NRGC2R3/: monitor.csv  training_metrics.csv
results/maze-ppo-NRGC2R3.1/: monitor.csv  training_metrics.csv
results/maze-ppo-NRGC3R3/: monitor.csv  training_metrics.csv
results/maze-ppo-NRGCRR5/: monitor.csv  training_metrics.csv
results/maze-ppo-NRGER4/: monitor.csv  training_metrics.csv
results/maze-ppo-NRGRR2/: monitor.csv  training_metrics.csv
results/maze-ppo-NRGRR4/: monitor.csv  training_metrics.csv
results/maze-ppo-WRGC1R1/: monitor.csv  training_metrics.csv
(+63 files in other folders)
