[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gymnasium_env"]

[project]
name = "gymnasium_env"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gymnasium",
  "pygame>=2.1.3",
  "pre-commit",
  "stable-baselines3>=2.6.0",
  "tqdm>=4.67.1",
  "ipykernel>=6.29.5",
  "seaborn>=0.13.2",
]
